--- a/v1/index.html
+++ b/v1/index.html
@@ -1,19 +1,17 @@
 <html>
 	<head>
+		<link href="css/style.css" rel="stylesheet">
 		<title>111681.me</title>
-		<style>
-			body{
-				padding:0;
-				margin:0;
-				background:rgb(25,25,25);
-				color:white;
-				font-family:courier;
-				text-align:center;
-			}
-		</style>
 	</head>
 	<body>
-		console.log("It is a site about Harsh Choudhary");
+		<div class="space">
+			Hey, Hi!!<br>
+			Harsh Choudhary here.<br>
+			I blog on <a href="http://blog.harshchoudhary.me" target="_blank">blog.harshchoudhary.me</a><br>
+			You can find my photographs portfolio on <a href="https://500px.com/harshchoudhary">500PX</a> and <a href="https://instagram.com/harsh.choudhary">Instagram</a><br>
+			I update my important stuff on <a href="https://facebook.com/shry.harsh">Facebook</a> and not-so-important philosophical thoughts on <a href="https://twitter.com/har_ssh">Twitter</a><br>
+			Currently studying in NIT Kurukshetra and will be joining Crisp Analytics after completing my graduation in June'15.
+		</div>
 	</body>
 </html>
 
