--- a/v1/index.html
+++ b/v1/index.html
@@ -5,12 +5,12 @@
 	</head>
 	<body>
 		<div class="space">
-			Hey, Hi!!<br>
-			Harsh Choudhary here.<br>
-			I blog on <a href="http://blog.harshchoudhary.me" target="_blank">blog.harshchoudhary.me</a><br>
-			You can find my photographs portfolio on <a href="https://500px.com/harshchoudhary">500PX</a> and <a href="https://instagram.com/harsh.choudhary">Instagram</a><br>
-			I update my important stuff on <a href="https://facebook.com/shry.harsh">Facebook</a> and not-so-important philosophical thoughts on <a href="https://twitter.com/har_ssh">Twitter</a><br>
-			Currently studying in NIT Kurukshetra and will be joining Crisp Analytics after completing my graduation in June'15.
+			<div class="profession">I enjoy being a <br><span class="designation">Photographer</span></div>
+			<div class="name">Harsh Choudhary
+			<br><a href="http://expressions.harshchoudhary.me">expressions.harshchoudhary.me</a>
+			<br><a href="http://500px.com/harshchoudhary">500px</a> | <a href="http://instagram.com/harsh.choudhary">Instagram</a>
+			<br> <span class="contact">8130675743|shry.harsh@gmail.com</span>
+			</div>
 		</div>
 	</body>
 </html>
