--- a/v1/index.html
+++ b/v1/index.html
@@ -6,6 +6,12 @@
 	<body>
 		<div class="space">
 			<div class="profession">I enjoy being a <br><span class="designation">Photographer</span></div>
+			<div class="tweets">
+			            <a class="twitter-timeline"  href="https://twitter.com/har_ssh" data-widget-id="689533429537308672" data-chrome="nofooter noborders noscrollbar nofooter transparent" height="400px">Tweets by @har_ssh</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
+          
+			</div>
 			<div class="name">Harsh Choudhary
 			<br><a href="http://expressions.harshchoudhary.me">expressions.harshchoudhary.me</a>
 			<br><a href="http://500px.com/harshchoudhary">500px</a> | <a href="http://instagram.com/harsh.choudhary">Instagram</a>
