--- a/v1/index.html
+++ b/v1/index.html
@@ -5,10 +5,10 @@
 	</head>
 	<body>
 		<div class="space">
-			<div class="profession">I enjoy being a <br><span class="designation">Photographer</span></div>
+			<div class="profession">I enjoy being <br><span class="designation">Me</span></div>
 			<div class="name">Harsh Choudhary
-			<br><a href="http://expressions.harshchoudhary.me">expressions.harshchoudhary.me</a>
-			<br><a href="http://500px.com/harshchoudhary">500px</a> | <a href="http://instagram.com/harsh.choudhary">Instagram</a>
+			<br>Blog - <a href="http://expressions.harshchoudhary.me">expressions.harshchoudhary.me</a>
+			<br>Photography - <a href="http://500px.com/harshchoudhary">500px</a> | <a href="http://instagram.com/harsh.choudhary">Instagram</a>
 			<br> <span class="contact">8130675743|shry.harsh@gmail.com</span>
 			</div>
 			<div class="tweets">
