--- a/v1/index.html
+++ b/v1/index.html
@@ -1,22 +1,56 @@
 <html>
 	<head>
-		<link href="css/style.css" rel="stylesheet">
-		<title>111681.me</title>
+		<link href="css/style2.css" rel="stylesheet">
+		<title>harshTime</title>
+		<meta name="description" content="Harsh Choudhary : NIT Kurukshetra graduate, Writing and Photography Enthusiast" />
+
+		<!-- Twitter Card data -->
+		<meta name="twitter:card" content="harshTi.me tells all about Harsh Choudhary">
+		<meta name="twitter:site" content="@har_ssh">
+		<meta name="twitter:title" content="HarshTime">
+		<meta name="twitter:description" content="Harsh Choudhary : NIT Kurukshetra graduate, Writing and Photography Enthusiast">
+		<meta name="twitter:creator" content="@har_ssh">
+
+		<!-- Open Graph data -->
+		<meta property="og:title" content="HarshTime" />
+		<meta property="og:url" content="http://harshti.me/" />
+		<meta property="og:description" content="Harsh Choudhary : NIT Kurukshetra graduate, Writing and Photography Enthusiast" />
+		<meta property="og:site_name" content="harshTime" />
 	</head>
 	<body>
-		<div class="space">
-			<div class="profession">I enjoy being <br><span class="designation">Me</span></div>
-			<div class="name">Harsh Choudhary
-			<br>Blog - <a href="http://expressions.harshchoudhary.me">expressions.harshchoudhary.me</a>
-			<br>Photography - <a href="http://500px.com/harshchoudhary">500px</a> | <a href="http://instagram.com/harsh.choudhary">Instagram</a>
-			<br> <span class="contact">8130675743|shry.harsh@gmail.com</span>
+		<div class="wall">
+			<div class="heading-part">
+				<h1>It's low or high but it's mytime - harshTi.me</h1>
 			</div>
-			<div class="tweets">
-			            <a class="twitter-timeline"  href="https://twitter.com/har_ssh" data-widget-id="689533429537308672" data-chrome="nofooter noborders noscrollbar nofooter transparent" height="400px">Tweets by @har_ssh</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			<div class="boxes-part">
+				<h2>Photography</h2>
+				<li><a href="/500px"><i class="fa fa-500px"></i></a></li> |
+				<li><a href="/instagram"><i class="fa fa-instagram"></i></a></li> |
+				<li><a href="/youtube"><i class="fa fa-youtube"></i></a></li>
+				<br><div class="line-sep"></div>
 
+				<h2>Engineering</h2>
+				<li><a href="/github"><i class="fa fa-github"></i></a></li> |
+				<li><a href="/linkedin"><i class="fa fa-linkedin"></i></a></li>
+				<br><div class="line-sep"></div>
+
+				<h2>Blog</h2>
+				<li><a href="/expressions">Expressions</a></li> |
+				<li><a href="/twitter"><i class="fa fa-twitter"></i></a></li>
 
 			</div>
 		</div>
+
+		<script src="https://use.fontawesome.com/17c9843f9c.js"></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-82437529-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</body>
 </html>
