viewport meta tag added

--- a/v1/index.html
+++ b/v1/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link href="css/style2.css" rel="stylesheet">
 		<title>harshTime</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Harsh Choudhary : NIT Kurukshetra graduate, Writing and Photography Enthusiast" />
 
 		<!-- Twitter Card data -->
